unpackaged/main/default/objects/EventApi__Speaker__c/EventApi__Speaker__c.object-meta.xml
<CustomObject>
    <description>Tracks speakers and maintains a list of all the schedule items the speaker will be featured and/or presenting.</description>
    <label>Speaker</label>
    <nameField>
        <label>Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>