unpackaged/main/default/objects/EventApi__Speaker__c/fields/EventApi__Bio__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Bio__c</fullName>
    <description>Biographical information is displayed on the event with the speaker&#39;s name.</description>
    <inlineHelpText>Biographical information is displayed on the event with the speaker&#39;s name..</inlineHelpText>
    <label>Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>