unpackaged/main/default/objects/EventApi__Speaker__c/fields/EventApi__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Company_Name__c</fullName>
    <description>The name of the company the Speaker would like to display on his/her Speaker page and name badge.</description>
    <inlineHelpText>The name of the company the Speaker would like to display on his/her Speaker page and name badge.</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>