unpackaged/main/default/objects/EventApi__Speaker__c/fields/EventApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the speaker&quot;s contact record.</description>
    <inlineHelpText>Link to the speaker&quot;s contact record.</inlineHelpText>
    <label>CRM Contact Link</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Speaking Engagements</relationshipLabel>
    <relationshipName>Speakers</relationshipName>
    <type>Lookup</type>
</CustomField>