unpackaged/main/default/objects/EventApi__Speaker__c/fields/EventApi__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Display_Order__c</fullName>
    <description>Value in this field defines the order used to display speakers for featured speakers and speaker components.</description>
    <inlineHelpText>Value in this field defines the order used to display speakers for featured speakers and speaker components.</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>