unpackaged/main/default/objects/EventApi__Speaker__c/fields/EventApi__Email__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Email__c</fullName>
    <description>** System Calculated Override ** The email for the Speaker. Derived from the linked Contact&#39;s &quot;Preferred Email&quot; field.</description>
    <inlineHelpText>** System Calculated Override ** The email for the Speaker. Derived from the linked Contact&#39;s &quot;Preferred Email&quot; field.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>