unpackaged/main/default/objects/EventApi__Speaker__c/fields/EventApi__Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related event.</description>
    <inlineHelpText>Link to related event.</inlineHelpText>
    <label>Event</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>Speakers</relationshipLabel>
    <relationshipName>Speakers</relationshipName>
    <type>Lookup</type>
</CustomField>