unpackaged/main/default/objects/EventApi__Speaker__c/fields/EventApi__Is_Featured__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Speaker will display in the &quot;Featured Speakers&quot; component for Lightning Events.</description>
    <inlineHelpText>When checked, the Speaker will display in the &quot;Featured Speakers&quot; component for Lightning Events.</inlineHelpText>
    <label>Is Featured</label>
    <type>Checkbox</type>
</CustomField>