unpackaged/main/default/objects/EventApi__Speaker__c/fields/EventApi__Large_Profile_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Large_Profile_Photo_URL__c</fullName>
    <description>Secure (&quot;https://&quot;) location of an image that will display on the event with the speaker&quot;s name and bio. Square images work best. Image should be at least 412px square and the file size should be less than 250 KB.</description>
    <inlineHelpText>Secure (&quot;https://&quot;) location of an image that will display on the event with the speaker&quot;s name and bio. Square images work best. Image should be at least 412px square and the file size should be less than 250 KB.</inlineHelpText>
    <label>Speaker Photo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>