unpackaged/main/default/objects/EventApi__Speaker__c/fields/EventApi__Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Other_Phone__c</fullName>
    <description>Alternate phone for the Speaker.</description>
    <inlineHelpText>Alternate phone for the Speaker.</inlineHelpText>
    <label>Other Phone</label>
    <type>Phone</type>
</CustomField>