unpackaged/main/default/objects/EventApi__Speaker__c/fields/EventApi__Phone__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Phone__c</fullName>
    <description>** System Calculated Override ** The primary phone for the Speaker. Derived from the linked Contact&#39;s &quot;Preffered Phone&quot; field.</description>
    <inlineHelpText>** System Calculated Override ** The primary phone for the Speaker. Derived from the linked Contact&#39;s &quot;Preffered Phone&quot; field.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>