unpackaged/main/default/objects/EventApi__Speaker__c/fields/EventApi__Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Special_Requests__c</fullName>
    <description>Other information or notes about the speaker.</description>
    <inlineHelpText>Other information or notes about the speaker.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>