unpackaged/main/default/objects/EventApi__Speaker__c/fields/EventApi__Status__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Status__c</fullName>
    <description>** Required ** The current Status for the Speaker.</description>
    <inlineHelpText>** Required ** The current Status for the Speaker.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Considering</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>Considering</label>
            </value>
            <value>
                <fullName>Invited</fullName>
                <color>#78C953</color>
                <label>Invited</label>
            </value>
            <value>
                <fullName>Tentative</fullName>
                <color>#E27001</color>
                <label>Tentative</label>
            </value>
            <value>
                <fullName>Negotiating</fullName>
                <color>#A845DC</color>
                <label>Negotiating</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <color>#F3D904</color>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>Declined</fullName>
                <color>#A53711</color>
                <label>Declined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>