unpackaged/main/default/objects/EventApi__Speaker__c/fields/EventApi__Title__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Title__c</fullName>
    <description>The title the Speaker would like to display on his/her Speaker page and name badge.</description>
    <inlineHelpText>The title the Speaker would like to display on his/her Speaker page and name badge.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>