unpackaged/main/default/objects/EventApi__Speaker__c/fields/LTE__Facebook_URL__c.field-meta.xml
<CustomField>
    <fullName>LTE__Facebook_URL__c</fullName>
    <description>Link to Speaker&#39;s Facebook profile.</description>
    <inlineHelpText>Link to Speaker&#39;s Facebook profile.</inlineHelpText>
    <label>Facebook URL</label>
    <type>Url</type>
</CustomField>