unpackaged/main/default/objects/EventApi__Speaker__c/fields/LTE__LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LTE__LinkedIn_URL__c</fullName>
    <description>Link to the Speaker&#39;s LinkedIn profile.</description>
    <inlineHelpText>Link to the Speaker&#39;s LinkedIn profile.</inlineHelpText>
    <label>LinkedIn URL</label>
    <type>Url</type>
</CustomField>