unpackaged/main/default/objects/EventApi__Speaker__c/fields/LTE__Twitter_URL__c.field-meta.xml
<CustomField>
    <fullName>LTE__Twitter_URL__c</fullName>
    <description>Link to the Speaker&#39;s Twitter profile.</description>
    <inlineHelpText>Link to the Speaker&#39;s Twitter profile.</inlineHelpText>
    <label>Twitter URL</label>
    <type>Url</type>
</CustomField>