unpackaged/main/default/objects/EventApi__Speaker__c/listViews/EventApi__All.listView-meta.xml
<ListView>
    <fullName>EventApi__All</fullName>
    <columns>NAME</columns>
    <columns>EventApi__Company_Name__c</columns>
    <columns>EventApi__Email__c</columns>
    <columns>EventApi__Event__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>